Fix calendar and box overflow
- hide box overflow
- fix calendar selectable date range

--- a/src/main/webapp/style/index.styl
+++ b/src/main/webapp/style/index.styl
@@ -163,6 +163,7 @@ body {
               box-sizing: border-box
               cursor: pointer
               transition: .25s
+              overflow: hidden
 
               &:hover {
                 transform: scale(1.1)
